--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
         }
     }
     buildFeatures{
-        viewBinding true;
+        viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -45,6 +45,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0' // Also add this line
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.gu.android:toolargetool:0.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 }
