:sparkles: added share text with messenging app of listdata and single one

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SuitCase"
         tools:targetApi="31">
+        <!-- Define the FileProvider for sharing files -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
         <activity
             android:name=".ViewPurchaseItemDetails"
             android:exported="false"
@@ -93,5 +103,6 @@
                 android:value="" />
         </activity>
     </application>
+
 
 </manifest>
