--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation 'com.gu.android:toolargetool:0.3.0'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
